# huntsman-mocks

./: .gitignore  .travis.yml  Huntsman mock image generator.ipynb  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
config_directory/: config_example.yaml
examples/notebooks/: mock_image.ipynb  mocks.ipynb  simple_mock_image.ipynb
examples/notebooks/sim_data/: cl19.fits  mw02.fits  mw04.fits  mw05.fits  mw06.fits
mocks/: comput.py  mocks.py
mocks/config_directory/: config.yaml
mocks/data/: input.yaml
mocks/tests/: conftest.py  test_mocks.py
mocks/tests/data/: corrupted_file.yaml
mocks/tests/utils/: test_utils.py
mocks/utils/: __init__.py
sim_data/: mw01.fits  mw03.fits
