[aliases]
test=pytest

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[metadata]
author = Lee Spitler
author_email = google_for_it
description = Mock image generator of simulations for telescopes.
edit_on_github = True
github_project = AstroHuntsman/huntsman-mocks
keywords = galaxies astronomy observatory image 
license = GNU GPL v3+
long_description = huntsman-mocks is a mock image generator generates fake images from simulation data using the AstroHuntsman/gunagala optical system framework.
package_name = mocks
url = https://www.facebook.com/AstroHuntsman/
